tests/NormalTests/paczka1/fuzzy1/17282212.err
Error in line 10: A277 S431 78,9
Error in line 22: EQ2qS7f5TV S7¦4 ¦6,2
Error in line 23: 99pDX S431 51,4
Error in line 18: QqZX A948 31,5
Error in line 29: QqZX S734 89,2
Error in line 27: 99pDX A277 5,6
Error in line 12: AJlZrR S734 24,6
Error in line 7: lQuvE A277 225,3
